--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <img class="image" src="images/dog19.jpg" alt="">
         <img class="image" src="images/dog20.jpg" alt="">
         <img class="image" src="images/dog21.jpg" alt="">
+        <img class="image" src="images/dog22.jpg" alt="">
+        <img class="image" src="images/dog23.jpg" alt="">
+        <img class="image" src="images/dog24.jpg" alt="">
     </div>
     <div>
         <h2>© 2021-2020</h2>
